--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,8 +1,35 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+   <children>
+      <Pane prefHeight="411.0" prefWidth="336.0">
+         <children>
+            <Pane layoutX="58.0" layoutY="92.0" prefHeight="228.0" prefWidth="221.0">
+               <children>
+                  <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="Button1" />
+                  <Button layoutX="80.0" layoutY="14.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="Button2" />
+                   <Button layoutX="146.0" layoutY="14.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="Button3" />
+                  <Button layoutX="14.0" layoutY="87.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="Button4" />
+                  <Button layoutX="80.0" layoutY="87.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="Button5" />
+                  <Button layoutX="146.0" layoutY="87.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="Button6" />
+                  <Button layoutX="14.0" layoutY="160.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="Button7" />
+                  <Button layoutX="80.0" layoutY="160.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="Button8" />
+                  <Button layoutX="146.0" layoutY="160.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="Button9" />
+               </children>
+            </Pane>
+         </children>
+      </Pane>
+   </children>
+   <columnConstraints>
+      <ColumnConstraints />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+   </rowConstraints>
 </GridPane>
